PyAMF Changelog
===============

This file contains information about the changes between the different
versions of PyAMF.

.. contents::

0.5 (unreleased)
----------------
 - Support for google.appengine.ext.db.polymodel.PolyModel (Ticket:633)
 - Support for Django File/ImageField (Ticket:631)
 - Support for Django model inheritance (Ticket:626)
 - Rewrote attribute handling code. Added the ability to exclude, set
   read-only and static attributes. See http://pyamf.org/wiki/AttributeControl
   for more details. (Ticket:601)
 - Exposed the amf request object if expose_request=True.
   Twisted/Django/Google have an amf_request property on the http request
   object.  WSGI has an entry in the environ dict - pyamf.request (Ticket:234)
 - Added support for the `array` module (Ticket:468)
 - Fixed an issue with Django model AutoFields being set to 0 by the Flex
   client (Ticket:556)
 - Added support for the collections module. (Ticket:474)
 - Added type checks for class objects. (Ticket:473)
 - GAE FloatProperty can now accept int's without issue (Ticket:609)
 - Revamped the lazy imports module to use sys.meta_path instead. Fixes all
   erroneous import errors (Ticket:485).
 - Django models will now accept dynamic properties (Ticket:575)
 - Django PK properties will be set first to allow related properties to apply
   correctly (Ticket:599)
 - p.r.encode/p.r.decode both have a new logger kwarg. Supply a logging.Logger
   instance if you want to see debug output (Ticket:588)
 - pyamf.TypedObjectClassAlias now forces the class type (Ticket:537)
 - If a call to Decoder.readElement results in an IOError exception, the
   original position of the stream will be restored (Ticket:573)
 - Replaced hardcoded Python implementation title in p.r.gateway.SERVER_NAME
   (Ticket:541)
 - Provide a user friendly way to handle datetime.time objects (Ticket:498)
 - Removed the useless pyamf.logging module (Ticket:577)
 - Added a new register_package helper function to make bulk class